# plant_analysis

./: .gitignore  pyproject.toml
_data_input/: recorded_data.csv
src/plant_analysis/: __init__.py
src/plant_analysis/cli/: attitude.py  chirp.py  diagnose.py  main.py  synthesize.py
src/plant_analysis/core/: __init__.py  bode.py  filters.py  metrics.py  schemas.py  signal.py  sysid.py
src/plant_analysis/diagnostics/: filter_analysis.py  filter_design.py
src/plant_analysis/pipeline/: attitude_compare.py  chirp.py  controller_synthesis.py
src/plant_analysis/utils/: data_utils.py  filter_utils.py  plot_utils.py  so3_utils.py  ulog_utils.py
tests/core/: test_filters.py  test_metrics.py  test_schemas.py  test_signal.py  test_sysid.py
tests/diagnostics/: test_filter_design.py
tests/pipeline/: test_controller_synthesis.py
tests/utils/: test_data_utils.py  test_filter_utils.py  test_so3_utils.py
